--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add a relevant page title</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -26,30 +25,54 @@
 
     <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
     <section class="projects">
-      <div class="content-wrap">
+      <div class="content-wrap divider">
         <h2>Featured Projects</h2>
         <p>View selected projects below. More information can be found at <a
             href="http://christinatruong.com">somewebsite.com</a>.</p>
 
         <!-- Copy the whole <section> block to add more projects. -->
-        <section>
-          <h3>Project Name</h3>
-          <img src="project-thumbnail.png" alt="description of image">
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a class="btn" href="#" target="_blank">View project / case study</a>
-        </section>
+          <section class="project-item ">
+            <div class="name-img">
+              <h3>Project Name</h3>
+              <img src="./images/lukas-blazek.jpg" alt="description of image">
+            </div>
+            <div class="description-projects">
+              <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+              <a class="btn" href="#" target="_blank">View project / case study</a>
+            </div>
+          </section>
         <!-- End of Project block. -->
+        <section class="project-item ">
+          <div class="name-img">
+            <h3>Project Name</h3>
+            <img src="./images/lukas-blazek.jpg" alt="description of image">
+          </div>
+          <div class="description-projects">
+            <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+            <a class="btn" href="#" target="_blank">View project / case study</a>
+          </div>
+        </section>
+        <section class="project-item ">
+          <div class="name-img">
+            <h3>Project Name</h3>
+            <img src="./images/lukas-blazek.jpg" alt="description of image">
+          </div>
+          <div class="description-projects">
+            <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+            <a class="btn" href="#" target="_blank">View project / case study</a>
+          </div>
+        </section>
       </div>
 
     </section>
 
     <!-- ***********************  WORK EXPERIENCE  *********************** -->
-    <section class="work-experience">
-      <div class="content-wrap">
+    <section class="work-experience ">
+      <div class="content-wrap divider">
         <h2>Work Experience</h2>
         <p>Optional paragraph for work experience summary.</p>
         <!-- Copy this whole <section> block to add more jobs. -->
-        <section class="project-item">
+        <section class="project-item ">
           <div class="job-details">
             <h3>Job title</h3>
             <p>Company Name</p>
@@ -66,7 +89,7 @@
           </div>
         </section>
         <!--Second Job-->
-        <section class="project-item">
+        <section class="project-item ">
           <div class="job-details">
             <h3>Job title</h3>
             <p>Company Name</p>
@@ -83,7 +106,7 @@
           </div>
         </section>
         <!--Third Job-->
-        <section class="project-item">
+        <section class="project-item ">
           <div class="job-details">
             <h3>Job title</h3>
             <p>Company Name</p>
@@ -106,7 +129,7 @@
 
 
     <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-    <section class="">
+    <section class="education">
       <div class="content-wrap">
         <h2>Education</h2>
 
@@ -117,6 +140,12 @@
           <p>Summary or accomplishments.</p>
         </section>
         <!-- End of School block. -->
+        <section>
+          <h3>School name - City</h3>
+          <p>Designation received or program name, year attended</p>
+          <p>Summary or accomplishments.</p>
+        </section>
+        
       </div>
 
     </section>
